--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>aurora-admin-bloom</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Aurora Admin Dashboard</title>
+    <meta name="description" content="A powerful and stylish admin dashboard built with modern tech stack." />
+    <meta name="author" content="Aryan Singh" />
 
-    <meta property="og:title" content="aurora-admin-bloom" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Aurora Admin Dashboard" />
+    <meta property="og:description" content="A powerful and stylish admin dashboard built with modern tech stack." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://yourdomain.com/path-to-og-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@aryansingh_dev" />
+    <meta name="twitter:image" content="https://yourdomain.com/path-to-og-image.png" />
   </head>
 
   <body>
